// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepIndexPattern should ensure we properly append a wildcard 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="l"
>
  <Header
    characterList="\\\\, /, ?, \\", <, >, |"
    errors={Array []}
    goToNextStep={[Function]}
    isInputInvalid={false}
    isNextStepDisabled={true}
    onQueryChanged={[Function]}
    query="k*"
  />
  <EuiSpacer
    size="s"
  />
  <LoadingIndices />
  <EuiSpacer
    size="s"
  />
</EuiPanel>
`;

exports[`StepIndexPattern should render normally 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="l"
>
  <Header
    characterList="\\\\, /, ?, \\", <, >, |"
    errors={Array []}
    goToNextStep={[Function]}
    isInputInvalid={false}
    isNextStepDisabled={false}
    onQueryChanged={[Function]}
    query="k"
  />
  <EuiSpacer
    size="s"
  />
  <StatusMessage
    matchedIndices={
      Object {
        "allIndices": Array [
          Object {
            "name": "kibana",
          },
          Object {
            "name": "es",
          },
        ],
        "exactMatchedIndices": Array [
          Object {
            "name": "kibana",
          },
        ],
        "partialMatchedIndices": Array [
          Object {
            "name": "kibana",
          },
        ],
        "visibleIndices": Array [
          Object {
            "name": "kibana",
          },
        ],
      }
    }
    query="k"
  />
  <EuiSpacer
    size="s"
  />
  <IndicesList
    indices={
      Array [
        Object {
          "name": "kibana",
        },
      ]
    }
  />
</EuiPanel>
`;

exports[`StepIndexPattern should render some indices 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="l"
>
  <Header
    characterList="\\\\, /, ?, \\", <, >, |"
    errors={Array []}
    goToNextStep={[Function]}
    isInputInvalid={false}
    isNextStepDisabled={false}
    onQueryChanged={[Function]}
    query="k*"
  />
  <EuiSpacer
    size="s"
  />
  <StatusMessage
    matchedIndices={
      Object {
        "allIndices": Array [
          Object {
            "name": "kibana",
          },
          Object {
            "name": "es",
          },
        ],
        "exactMatchedIndices": Array [
          Object {
            "name": "kibana",
          },
        ],
        "partialMatchedIndices": Array [],
        "visibleIndices": Array [
          Object {
            "name": "kibana",
          },
        ],
      }
    }
    query="k*"
  />
  <EuiSpacer
    size="s"
  />
  <IndicesList
    indices={
      Array [
        Object {
          "name": "kibana",
        },
      ]
    }
  />
</EuiPanel>
`;

exports[`StepIndexPattern should render the loading state 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="l"
>
  <Header
    characterList="\\\\, /, ?, \\", <, >, |"
    errors={Array []}
    goToNextStep={[Function]}
    isInputInvalid={false}
    isNextStepDisabled={true}
    onQueryChanged={[Function]}
    query="k"
  />
  <EuiSpacer
    size="s"
  />
  <LoadingIndices />
  <EuiSpacer
    size="s"
  />
</EuiPanel>
`;

exports[`StepIndexPattern should search for partial indices for queries not ending in a wildcard 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="l"
>
  <Header
    characterList="\\\\, /, ?, \\", <, >, |"
    errors={Array []}
    goToNextStep={[Function]}
    isInputInvalid={false}
    isNextStepDisabled={false}
    onQueryChanged={[Function]}
    query="k"
  />
  <EuiSpacer
    size="s"
  />
  <StatusMessage
    matchedIndices={
      Object {
        "allIndices": Array [
          Object {
            "name": "kibana",
          },
          Object {
            "name": "es",
          },
        ],
        "exactMatchedIndices": Array [
          Object {
            "name": "kibana",
          },
        ],
        "partialMatchedIndices": Array [
          Object {
            "name": "kibana",
          },
        ],
        "visibleIndices": Array [
          Object {
            "name": "kibana",
          },
        ],
      }
    }
    query="k"
  />
  <EuiSpacer
    size="s"
  />
  <IndicesList
    indices={
      Array [
        Object {
          "name": "kibana",
        },
      ]
    }
  />
</EuiPanel>
`;

exports[`StepIndexPattern should show errors 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="l"
>
  <Header
    characterList="\\\\, /, ?, \\", <, >, |"
    errors={
      Array [
        "Your input contains invalid characters or spaces. Please omit: \\\\, /, ?, \\", <, >, |",
      ]
    }
    goToNextStep={[Function]}
    isInputInvalid={true}
    isNextStepDisabled={true}
    onQueryChanged={[Function]}
    query="?"
  />
  <EuiSpacer
    size="s"
  />
  <LoadingIndices />
  <EuiSpacer
    size="s"
  />
</EuiPanel>
`;
